...
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_agreement">Нажимая на кнопку, я даю согласие на обработку персональных данных, соглашаюсь с <a href="https://kassa.taxi/privacy">политикой конфиденциальности</a> и принимаю условия <a href="https://kassa.taxi/agreement">лицензионного соглашения</a>.</string>
    <string name="login_btn">Войти</string>
    <string name="login_agreement_title">Подтверждаю свое согласие на обработку и хранение моих персональных данных в соответствии с пользовательским соглашением</string>
    <string name="accept_conditions_error">Необходимо принять условия работы</string>
    <string name="input_field_error">Заполните поле</string>
    <string name="wrong_format_error">Неправильный формат</string>
    <string name="intro_message">Удобные выплаты для водителей с баланса агрегаторов такси на личный счет</string>
    <string name="registration">Регистрация</string>
    <string name="input_phone_number">Введите номер телефона</string>
    <string name="phone_start_symbols">+7 (</string>
...
    <string name="support_service_message">Звонок в службу поддержки бесплатный, нажмите кнопку согласия если вы столкнулись с проблемой, которую необходимо решить.</string>
    <string name="exit_message">Вы действительно хотите выйти?</string>
    <string name="call">Вызов</string>
    <string name="cancel">Отмена</string>
    <string name="not_find_call_app">Не найдено приложение для совершения звонков</string>
    <string name="profile_format">+%s</string>
    <string name="internet_unavailable">Интернет недоступен</string>
    <!--    Balance-->
    <string name="all_partners_sum">Общая сумма по всем партнерам</string>
    <string name="yandex_title">Яндекс.Такси</string>
    <string name="citymobil_title">Ситимобил</string>
    <string name="gett_title">Gett taxi</string>
    <string name="rosneft_title">Роснефть</string>
...
