...
            android:id="@+id/num_0"
            style="@style/KeyboardButtonStyle"
            android:text="0"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/apply_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_keyboard_button"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
...
