...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/auth_code_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        app:layoutDescription="@xml/fragment_auth_code_scene">

        <ImageView
...
