<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/profile_background"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/keyboard"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_background">

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4dp"
                android:layout_marginTop="12dp"
                android:background="?attr/selectableItemBackground"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/balance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/balance"
                android:textColor="@color/gray_intro_text"
                android:textSize="@dimen/text_20sp"
                app:layout_constraintBottom_toBottomOf="@+id/back_arrow"
                app:layout_constraintStart_toEndOf="@+id/back_arrow"
                app:layout_constraintTop_toTopOf="@+id/back_arrow" />

            <TextView
                android:id="@+id/notification_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/margin_24dp"
                android:background="@drawable/ic_chip_notification"
                android:paddingStart="9dp"
                android:paddingTop="3dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="3" />

            <ImageView
                android:id="@+id/notification_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/margin_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_notification"
                tools:visibility="invisible" />

            <TextView
                android:id="@+id/fuel_replenish_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="28dp"
                android:text="@string/fuel_replenish"
                android:textColor="@color/gray_intro_text"
                android:textSize="@dimen/text_24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/balance_title" />

            <ImageView
                android:id="@+id/rosneft_image"
                android:layout_width="@dimen/size_42dp"
                android:layout_height="@dimen/size_42dp"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="22dp"
                android:src="@drawable/ic_rosneft"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fuel_replenish_tv" />

            <TextView
                android:id="@+id/rosneft_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/balance_green"
                android:textSize="@dimen/text_18sp"
                app:layout_constraintBottom_toTopOf="@+id/rosneft_title"
                app:layout_constraintStart_toEndOf="@+id/rosneft_image"
                app:layout_constraintTop_toTopOf="@+id/rosneft_image"
                tools:text="1000 ₽" />

            <TextView
                android:id="@+id/rosneft_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:fontFamily="sans-serif"
                android:text="@string/rosneft_title"
                android:textColor="@color/gray_profile"
                android:textSize="@dimen/text_16sp"
                app:layout_constraintBottom_toBottomOf="@+id/rosneft_image"
                app:layout_constraintStart_toEndOf="@+id/rosneft_image" />

            <ImageView
                android:id="@+id/background"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="18dp"
                android:src="@drawable/bg_balance"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rosneft_title"
                app:layout_constraintVertical_bias="1.0" />

            <View
                android:id="@+id/space"
                android:layout_width="56dp"
                android:layout_height="2dp"
                android:layout_marginTop="18dp"
                android:background="@color/gray_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/background" />

            <TextView
                android:id="@+id/choose_aggregator_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="44dp"
                android:fontFamily="sans-serif"
                android:text="@string/choose_aggregator"
                android:textColor="@color/gray_intro_text"
                android:textSize="@dimen/text_14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/background" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/taxi_recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_24dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_aggregator_tv"
                tools:itemCount="3"
                tools:listitem="@layout/item_taxi" />

            <TextView
                android:id="@+id/enter_charge_amount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_32dp"
                android:fontFamily="sans-serif"
                android:text="@string/enter_charge_amount"
                android:textColor="@color/gray_intro_text"
                android:textSize="@dimen/text_14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taxi_recycler" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enter_amount_input_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="@dimen/margin_24dp"
                android:hint="@string/enter_amount"
                android:textColorHint="@color/gray_profile"
                android:textSize="@dimen/text_13sp"
                app:errorTextAppearance="@style/ErrorAppearance"
                app:layout_constraintEnd_toEndOf="@+id/background"
                app:layout_constraintStart_toStartOf="@+id/background"
                app:layout_constraintTop_toBottomOf="@+id/enter_charge_amount_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enter_amount_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray_profile"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/gray_intro_text"
                    android:textColorHint="@color/gray_profile"
                    android:textSize="@dimen/text_16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/replenish_button"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_48dp"
                android:background="@drawable/bg_intro_btn"
                android:fontFamily="sans-serif-medium"
                android:text="@string/replenish"
                android:textAllCaps="false"
                android:textColor="@color/continue_color"
                android:textSize="@dimen/text_20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/success_layout"
        layout="@layout/fragment_success"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/keyboard"
        layout="@layout/keyboard"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>