...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/balance_tv" />

                <TextView
                    android:id="@+id/balance_view"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:background="?attr/selectableItemBackground"
...
