...
                    android:textColor="@color/gray_profile"
                    android:textSize="@dimen/text_16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/rosneft_image"
                    app:layout_constraintStart_toEndOf="@+id/rosneft_image" />

                <TextView
                    android:id="@+id/replenish_rosneft_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_registration_btn"
                    android:fontFamily="sans-serif"
...
